# libratbag

./: .buildinfo  .editorconfig  .flake8  .gitignore  COPYING  DBusInterface.md  FoodTrackerGUI  Libra.git  Makefile.am  README.md  TODO  autogen.sh  build_script.sh  circle.yml  compile_driver.sh  complete_debug.sh  configure.ac  dbus.html  debug_sentey_driver.sh  diagnose_driver.sh  fix_sentey_driver.sh  genindex.html  index.html  meson.build  meson_options.txt  objects.inv  pyproject.toml  ratbagd.service.in  release.sh  remove_duplicate.sh  search.html  searchindex.js
.circleci/: config.yml
.doctrees/: dbus.doctree  environment.pickle  index.doctree
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql.yml  main.yml  pages.yml
_sources/: dbus.rst.txt  index.rst.txt
_static/css/: badge_only.css  theme.css
_static/js/: theme.js
captures/: A10 ScrollDown.txt  A2 LeftClick.txt  A2 RightClick.txt  A3 LeftClick.txt  A3 WheelClick.txt  A4 Button4.txt  A4 LeftClick.txt  A5 Button5.txt  A5 LeftClick.txt  A6 LeftClick.txt  A7 LeftClick.txt  A8 LeftClick.txt  A9 ScrollUp.txt  ANALISIS_PATRONES.md  Apertura del software.txt  Asignacion de 4 niveles de DPI.txt  DPI1-4.txt  DPI1.txt  DPI2.txt  DPI3.txt  DPI4.txt  HERRAMIENTAS_PRE_COMPILACION.md  Informacion oficial del mouse.md  Perfil 1.txt  Perfil 2.txt  Perfil 3.txt  Perfil 4.txt  Perfil 5.txt  REQUISITOS_DRIVER_LIBRATBAG.md  RESULTADOS_PRUEBAS_PRE_COMPILACION.md  capturaLRB.txt  colores posibles perfil 1.txt  guia.txt
data/: Makefile.am  README.md
data/default/: README.md
data/devices/: README.md  asus-rog-buzzard.device  asus-rog-chakram-core.device  asus-rog-chakram-x.device  asus-rog-chakram.device  asus-rog-gladius2-core.device  asus-rog-gladius2-origin-pink.device  asus-rog-gladius2-origin.device  asus-rog-gladius2.device  asus-rog-harpe-wireless.device  asus-rog-keris-ii-origin.device  asus-rog-keris-wireless-aimpoint.device  asus-rog-keris-wireless.device  asus-rog-keris.device  asus-rog-omni-receiver.device  asus-rog-pugio.device  asus-rog-spatha-x.device  asus-rog-strix-carry.device  asus-rog-strix-impact.device  asus-rog-strix-impact2-wireless.device  asus-rog-strix-impact2.device  asus-tuf-gaming-m4-air.device  asus-tuf-gaming-mini-wl-miku.device  attack-shark-x11.device  coolermaster-cmstorm-recon.device  data-parse-test.py  device.example  dream-machines-dm5-blink.device  duplicate-check.py  etekcity-fixme.device  etekcity-scroll-alpha.device  genesis-krypton-750.device  genesis-xenon210.device  glorious-model-d.device  glorious-model-i  glorious-model-i.device  glorious-model-o-eternal.device  glorious-model-o-wireless.device  glorious-model-o.device  gskill-MX-780.device  (+144 more)
data/gnome/: README.md  check-svg.py
dbus/: org.freedesktop.ratbag1.conf  org.freedesktop.ratbag1.conf.in  org.freedesktop.ratbag1.service.in  org.freedesktop.ratbag_devel1.conf.in
doc/: Makefile.am  conf.py.in  dbus.rst  doxygen-enums-to-rst.xsl  index.rst  libratbag.doxygen.in  meson.build
doc/style/: LICENSE  header.html
hwdb/: 70-libratbag-mouse.hwdb  70-libratbag-mouse.rules  Makefile.am
python/: ratbagctl.in  ratbagctl.py
python/ratbagd/: __init__.py
ratbagd/: .gitignore  COPYING  README.md  meson.build  ratbagd-button.c  ratbagd-device.c  ratbagd-json.c  ratbagd-json.h  ratbagd-led.c  ratbagd-profile.c  ratbagd-resolution.c  ratbagd-test.c  ratbagd-test.h  ratbagd.8  ratbagd.c  ratbagd.h  ratbagd.service.in  shared-rbtree.c
ratbagd/doc/: ratbagctl.1
ratbagd/src/: org.freedesktop.ratbag1.conf  ratbagd-profile.c  (+2 more)
rbtree/: meson.build
rbtree/src/rbtree/: shared-rbtree.c  shared-rbtree.h
semaphore/: semaphore-build-script.sh
src/: Makefile.am  asus.c  asus.h  debug.h  driver-asus.c  driver-attackshark.c  driver-cmstorm.c  driver-etekcity.c  driver-gskill.c  driver-hidpp10.c  driver-hidpp20.c  driver-holtek.h  driver-hyperx.c  driver-hyperx.h  driver-logitech-g300.c  driver-logitech-g600.c  driver-logitech-unifying.c  driver-madcatz.c  driver-openinput.c  driver-openrazer.c  driver-rapoo.c  driver-roccat-kone-aimo.c  driver-roccat-kone-emp.c  driver-roccat-kone-pure.c  driver-roccat.c  driver-sentey.c  driver-sinowealth-nubwo.c  driver-sinowealth.c  driver-sinowealth.h  driver-steelseries.c  driver-steelseries.h  driver-test.c  driver-trust-gxt164.c  etekcity.c  hidpp-constants.h  hidpp-generic.c  hidpp-generic.h  hidpp.i  hidpp10.c  hidpp10.h  (+35 more)
src/driver-holtek/: driver-holtek8a.c  driver-holtek8b.c  holtek8-shared.c  holtek8-shared.h
src/driver-marsgaming/: driver-marsgaming.c  marsgaming-buttons.c  marsgaming-buttons.h  marsgaming-command.c  marsgaming-command.h  marsgaming-commit.c  marsgaming-commit.h  marsgaming-definitions.h  marsgaming-leds.c  marsgaming-leds.h  marsgaming-probe.c  marsgaming-probe.h  marsgaming-protocol.h  marsgaming-query.c  marsgaming-query.h
test/: Makefile.am  build-cxx.cc  build-pedantic.c  data-parse-test.py  duplicate-check.py  python-black-check.sh  python-ruff-check.sh  receiver-check.py  symbols-leak-test  symbols-leak-test.in  test-context.c  test-device.c  test-iconv-helper.c  test-util.c  valgrind.suppressions
test/test_emulation/: __init__.py  test_steelseries.py
test/test_emulation/rules.d/: 61-ratbag-emu-ignore-test-devices.rules
tools/: Makefile.am  check_scan_build.py  hidpp10-dump-page.c  hidpp20-dump-page.c  hidpp20-reset.c  lur-command.c  lur-command.man  merge_ratbagd.py  python-black.sh  python-ruff.sh  ratbag-command.c  ratbag-command.man  ratbag-git-sha.sh  ratbagc.py  ratbagc.py.in  ratbagctl.1  ratbagctl.body.py.in  ratbagctl.devel.in  ratbagctl.devel.py.in  ratbagctl.in  ratbagctl.in.in  ratbagctl.test.in  ratbagctl.test.py.in  ratbagctl.test.wrapper  ratbagd.py  shared.c  shared.h  test-ratbag-command.sh  toolbox.py  valgrind-ratbag-command.supp
uLogitech/: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac
uLogitech/include/: debug.h  hidpp10.h  unifying.h
uLogitech/lib/: Makefile.am  hidpp10.c  unifying.c
uLogitech/src/: Makefile.am  list_unifying_devices.c  m705_button6_toggler.c  pairing_tool.c  unpairing_tool.c
(+5 files in other folders)
